fix retrieving wrong cart items